# health-etl-data-platform

./: .gitignore  .pre-commit-config.yaml  README.md
app-database/: Dockerfile  README.md  docker-compose.yml
app-database/init/: 01_create_tables.sql
data-producer/: pyproject.toml  wearable_data_producer.py
etl-database/: Dockerfile  README.md  docker-compose.yml
health_etl/: .envrc-template  .envrc-template copy  README.md  dagster.yaml  health_etl_dlt.py  incremental_load.py  pyproject.toml  workspace.yml
health_etl/.dlt/: config.toml  secrets.toml
health_etl/dbt/: .user.yml  Makefile  dbt_project.yml  profiles.yml
health_etl/dbt/models/: sources.yml
health_etl/dbt/models/dimensions/: dim_content.sql
health_etl/dbt/models/dimensions/schema/: dim_content.yml
health_etl/dbt/models/facts/: fct_user_activity.sql
health_etl/dbt/models/facts/schema/: fct_user_activity.yml
health_etl/dbt/models/staging/: stg_user_activity.sql
health_etl/dbt/models/staging/schema/: stg_user_activity.yml
health_etl/health_etl_dagster/: assets.py  jobs.py  ops.py  repository.py
health_etl/health_etl_dlt/: health_etl_dlt.py
health_etl_dagster/: README.md  pyproject.toml  setup.cfg  setup.py  workspace.yaml
health_etl_dagster/health_etl/: __init__.py  assets.py
health_etl_dagster/health_etl_dagster/: __init__.py  assets.py
