[project]
name = "health-etl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dagster>=1.10.15",
    "dagster-dbt>=0.26.15",
    "dagster-embedded-elt>=0.26.15",
    "dagster-postgres>=0.26.15",
    "dagster-webserver>=1.10.15",
    "dbt-osmosis>=1.1.17",
    "dbt-postgres>=1.9.0",
    "dlt[postgres]>=1.11.0",
    "pandas>=2.2.3",
    "psycopg2>=2.9.10",
]

[tool.dagster]
module_name = "health_etl_dagster.repository"
