[project]
name = "health-etl-dagster"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dagster>=1.10.14",
    "dagster-dbt>=0.26.14",
    "dagster-duckdb>=0.26.14",
    "dagster-postgres>=0.26.14",
    "dlt>=1.10.0",
    "psycopg2>=2.9.10",
    "python-dotenv>=1.1.0",
]


[tool.dagster]
module_name = "health_etl"