[project]
name = "health_etl_dagster"
version = "0.1.0"
description = "HealthETL Data Platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dagster>=1.10.14",
    "dagster-dbt>=0.26.14",
    "dagster-duckdb>=0.26.14",
    "dagster-webserver>=1.10.14",
    "dbt-duckdb>=1.9.3",
    "dlt[postgres]>=1.10.0",
    "psycopg2>=2.9.10",
]


[tool.dagster]
module_name = "health_etl"

